--- a/main.ipynb
+++ b/main.ipynb
@@ -5,7 +5,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "test = 123"
+   ]
   }
  ],
  "metadata": {
