--- a/main.ipynb
+++ b/main.ipynb
@@ -2,11 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
+    "import numpy as np\n",
+    "import plotly_express as px\n",
     "\n",
     "# Load datasets\n",
     "data_athletes = pd.read_csv('Data/athlete_events.csv')\n",
@@ -15,9 +17,223 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Afghanistan\n",
+      "Curacao\n",
+      "Albania\n",
+      "Algeria\n",
+      "Andorra\n",
+      "Angola\n",
+      "Antigua\n",
+      "Australia\n",
+      "Argentina\n",
+      "Armenia\n",
+      "Aruba\n",
+      "American Samoa\n",
+      "Austria\n",
+      "Azerbaijan\n",
+      "Bahamas\n",
+      "Bangladesh\n",
+      "Barbados\n",
+      "Burundi\n",
+      "Belgium\n",
+      "Benin\n",
+      "Bermuda\n",
+      "Bhutan\n",
+      "Bosnia and Herzegovina\n",
+      "Belize\n",
+      "Belarus\n",
+      "Czech Republic\n",
+      "Boliva\n",
+      "Botswana\n",
+      "Brazil\n",
+      "Bahrain\n",
+      "Brunei\n",
+      "Bulgaria\n",
+      "Burkina Faso\n",
+      "Central African Republic\n",
+      "Cambodia\n",
+      "Canada\n",
+      "Cayman Islands\n",
+      "Republic of Congo\n",
+      "Chad\n",
+      "Chile\n",
+      "China\n",
+      "Ivory Coast\n",
+      "Cameroon\n",
+      "Democratic Republic of the Congo\n",
+      "Cook Islands\n",
+      "Colombia\n",
+      "Comoros\n",
+      "Cape Verde\n",
+      "Costa Rica\n",
+      "Croatia\n",
+      "Greece\n",
+      "Cuba\n",
+      "Cyprus\n",
+      "Denmark\n",
+      "Djibouti\n",
+      "Dominica\n",
+      "Dominican Republic\n",
+      "Ecuador\n",
+      "Egypt\n",
+      "Eritrea\n",
+      "El Salvador\n",
+      "Spain\n",
+      "Estonia\n",
+      "Ethiopia\n",
+      "Russia\n",
+      "Fiji\n",
+      "Finland\n",
+      "France\n",
+      "Germany\n",
+      "Micronesia\n",
+      "Gabon\n",
+      "Gambia\n",
+      "UK\n",
+      "Guinea-Bissau\n",
+      "Georgia\n",
+      "Equatorial Guinea\n",
+      "Ghana\n",
+      "Grenada\n",
+      "Guatemala\n",
+      "Guinea\n",
+      "Guam\n",
+      "Guyana\n",
+      "Haiti\n",
+      "Honduras\n",
+      "Hungary\n",
+      "Indonesia\n",
+      "India\n",
+      "Iran\n",
+      "Ireland\n",
+      "Iraq\n",
+      "Iceland\n",
+      "Israel\n",
+      "Virgin Islands, US\n",
+      "Italy\n",
+      "Virgin Islands, British\n",
+      "Jamaica\n",
+      "Jordan\n",
+      "Japan\n",
+      "Kazakhstan\n",
+      "Kenya\n",
+      "Kyrgyzstan\n",
+      "Kiribati\n",
+      "South Korea\n",
+      "Kosovo\n",
+      "Saudi Arabia\n",
+      "Kuwait\n",
+      "Laos\n",
+      "Latvia\n",
+      "Libya\n",
+      "Liberia\n",
+      "Saint Lucia\n",
+      "Lesotho\n",
+      "Lebanon\n",
+      "Liechtenstein\n",
+      "Lithuania\n",
+      "Luxembourg\n",
+      "Madagascar\n",
+      "Malaysia\n",
+      "Morocco\n",
+      "Malawi\n",
+      "Moldova\n",
+      "Maldives\n",
+      "Mexico\n",
+      "Mongolia\n",
+      "Marshall Islands\n",
+      "Macedonia\n",
+      "Mali\n",
+      "Malta\n",
+      "Montenegro\n",
+      "Monaco\n",
+      "Mozambique\n",
+      "Mauritius\n",
+      "Mauritania\n",
+      "Myanmar\n",
+      "Namibia\n",
+      "Nicaragua\n",
+      "Netherlands\n",
+      "Nepal\n",
+      "Nigeria\n",
+      "Niger\n",
+      "Norway\n",
+      "Nauru\n",
+      "New Zealand\n",
+      "Oman\n",
+      "Pakistan\n",
+      "Panama\n",
+      "Paraguay\n",
+      "Peru\n",
+      "Philippines\n",
+      "Palestine\n",
+      "Palau\n",
+      "Papua New Guinea\n",
+      "Poland\n",
+      "Portugal\n",
+      "North Korea\n",
+      "Puerto Rico\n",
+      "Qatar\n",
+      "Zimbabwe\n",
+      "nan\n",
+      "Romania\n",
+      "South Africa\n",
+      "Rwanda\n",
+      "Samoa\n",
+      "Serbia\n",
+      "Senegal\n",
+      "Seychelles\n",
+      "Singapore\n",
+      "Saint Kitts\n",
+      "Sierra Leone\n",
+      "Slovenia\n",
+      "San Marino\n",
+      "Solomon Islands\n",
+      "Somalia\n",
+      "Sri Lanka\n",
+      "South Sudan\n",
+      "Sao Tome and Principe\n",
+      "Sudan\n",
+      "Switzerland\n",
+      "Suriname\n",
+      "Slovakia\n",
+      "Sweden\n",
+      "Swaziland\n",
+      "Syria\n",
+      "Tanzania\n",
+      "Tonga\n",
+      "Thailand\n",
+      "Tajikistan\n",
+      "Turkmenistan\n",
+      "Timor-Leste\n",
+      "Togo\n",
+      "Taiwan\n",
+      "Trinidad\n",
+      "Tunisia\n",
+      "Turkey\n",
+      "United Arab Emirates\n",
+      "Uganda\n",
+      "Ukraine\n",
+      "Uruguay\n",
+      "USA\n",
+      "Uzbekistan\n",
+      "Vanuatu\n",
+      "Venezuela\n",
+      "Vietnam\n",
+      "Saint Vincent\n",
+      "Yemen\n",
+      "Zambia\n",
+      "Tuvalu\n"
+     ]
+    }
+   ],
    "source": [
     "# Extract unique region names\n",
     "unique_regions = data_noc['region'].unique()\n",
@@ -36,9 +252,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Total number of unique regions: 207\n"
+     ]
+    }
+   ],
    "source": [
     "# Filter out excluded regions and count\n",
     "filtered_regions = [\n",
@@ -51,11 +275,180 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "### Which sports are in the event?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Types of sports:\n",
+      "Basketball\n",
+      "Judo\n",
+      "Football\n",
+      "Tug-Of-War\n",
+      "Speed Skating\n",
+      "Cross Country Skiing\n",
+      "Athletics\n",
+      "Ice Hockey\n",
+      "Swimming\n",
+      "Badminton\n",
+      "Sailing\n",
+      "Biathlon\n",
+      "Gymnastics\n",
+      "Art Competitions\n",
+      "Alpine Skiing\n",
+      "Handball\n",
+      "Weightlifting\n",
+      "Wrestling\n",
+      "Luge\n",
+      "Water Polo\n",
+      "Hockey\n",
+      "Rowing\n",
+      "Bobsleigh\n",
+      "Fencing\n",
+      "Equestrianism\n",
+      "Shooting\n",
+      "Boxing\n",
+      "Taekwondo\n",
+      "Cycling\n",
+      "Diving\n",
+      "Canoeing\n",
+      "Tennis\n",
+      "Modern Pentathlon\n",
+      "Figure Skating\n",
+      "Golf\n",
+      "Softball\n",
+      "Archery\n",
+      "Volleyball\n",
+      "Synchronized Swimming\n",
+      "Table Tennis\n",
+      "Nordic Combined\n",
+      "Baseball\n",
+      "Rhythmic Gymnastics\n",
+      "Freestyle Skiing\n",
+      "Rugby Sevens\n",
+      "Trampolining\n",
+      "Beach Volleyball\n",
+      "Triathlon\n",
+      "Ski Jumping\n",
+      "Curling\n",
+      "Snowboarding\n",
+      "Rugby\n",
+      "Short Track Speed Skating\n",
+      "Skeleton\n",
+      "Lacrosse\n",
+      "Polo\n",
+      "Cricket\n",
+      "Racquets\n",
+      "Motorboating\n",
+      "Military Ski Patrol\n",
+      "Croquet\n",
+      "Jeu De Paume\n",
+      "Roque\n",
+      "Alpinism\n",
+      "Basque Pelota\n",
+      "Aeronautics\n"
+     ]
+    }
+   ],
+   "source": [
+    "sports_list = data_athletes['Sport'].unique()\n",
+    "\n",
+    "print(\"Types of sports:\")\n",
+    "for sport in sports_list:\n",
+    "    print(sport)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### What types of medals are won?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Types of medals:\n",
+      "Gold\n",
+      "Bronze\n",
+      "Silver\n"
+     ]
+    }
+   ],
+   "source": [
+    "medal_types = data_athletes['Medal'].unique()\n",
+    "\n",
+    "# Removes the rows where no medals has been won\n",
+    "medal_types_filtered = np.delete(medal_types, 0)\n",
+    "\n",
+    "print(\"Types of medals:\")\n",
+    "for medal in medal_types_filtered:\n",
+    "    print(medal)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Top 10 countries based on total medals won"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "\nImage export using the \"kaleido\" engine requires the kaleido package,\nwhich can be installed using pip:\n    $ pip install -U kaleido\n",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[1;32mc:\\Users\\maxra\\OneDrive\\Documents\\Github\\Projekt_OS_Australien\\main.ipynb Cell 9\u001b[0m line \u001b[0;36m1\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/maxra/OneDrive/Documents/Github/Projekt_OS_Australien/main.ipynb#X11sZmlsZQ%3D%3D?line=7'>8</a>\u001b[0m top_ten_countries \u001b[39m=\u001b[39m country_medals\u001b[39m.\u001b[39msort_values(by\u001b[39m=\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mTotal Medals\u001b[39m\u001b[39m\"\u001b[39m, ascending\u001b[39m=\u001b[39m\u001b[39mFalse\u001b[39;00m)\u001b[39m.\u001b[39mhead(\u001b[39m10\u001b[39m)\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/maxra/OneDrive/Documents/Github/Projekt_OS_Australien/main.ipynb#X11sZmlsZQ%3D%3D?line=9'>10</a>\u001b[0m top_ten_countries_diagram \u001b[39m=\u001b[39m px\u001b[39m.\u001b[39mbar(\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/maxra/OneDrive/Documents/Github/Projekt_OS_Australien/main.ipynb#X11sZmlsZQ%3D%3D?line=10'>11</a>\u001b[0m     top_ten_countries,\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/maxra/OneDrive/Documents/Github/Projekt_OS_Australien/main.ipynb#X11sZmlsZQ%3D%3D?line=11'>12</a>\u001b[0m     x\u001b[39m=\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mNOC\u001b[39m\u001b[39m\"\u001b[39m, y\u001b[39m=\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mTotal Medals\u001b[39m\u001b[39m\"\u001b[39m,\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/maxra/OneDrive/Documents/Github/Projekt_OS_Australien/main.ipynb#X11sZmlsZQ%3D%3D?line=14'>15</a>\u001b[0m     labels\u001b[39m=\u001b[39m{\u001b[39m\"\u001b[39m\u001b[39mNOC\u001b[39m\u001b[39m\"\u001b[39m : \u001b[39m\"\u001b[39m\u001b[39mCountries\u001b[39m\u001b[39m\"\u001b[39m, \u001b[39m\"\u001b[39m\u001b[39mTotal Medals\u001b[39m\u001b[39m\"\u001b[39m : \u001b[39m\"\u001b[39m\u001b[39mMedals\u001b[39m\u001b[39m\"\u001b[39m}\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/maxra/OneDrive/Documents/Github/Projekt_OS_Australien/main.ipynb#X11sZmlsZQ%3D%3D?line=15'>16</a>\u001b[0m )\n\u001b[1;32m---> <a href='vscode-notebook-cell:/c%3A/Users/maxra/OneDrive/Documents/Github/Projekt_OS_Australien/main.ipynb#X11sZmlsZQ%3D%3D?line=17'>18</a>\u001b[0m top_ten_countries_diagram\u001b[39m.\u001b[39;49mwrite_image(\u001b[39m\"\u001b[39;49m\u001b[39m../Projekt_OS_Australien/Visualisering/Top_ten_countries_medals.png\u001b[39;49m\u001b[39m\"\u001b[39;49m)\n",
+      "File \u001b[1;32mc:\\Users\\maxra\\.virtualenvs\\Databehandling-Max-Rain--ARGqDdif\\Lib\\site-packages\\plotly\\basedatatypes.py:3841\u001b[0m, in \u001b[0;36mBaseFigure.write_image\u001b[1;34m(self, *args, **kwargs)\u001b[0m\n\u001b[0;32m   3781\u001b[0m \u001b[39m\u001b[39m\u001b[39m\"\"\"\u001b[39;00m\n\u001b[0;32m   3782\u001b[0m \u001b[39mConvert a figure to a static image and write it to a file or writeable\u001b[39;00m\n\u001b[0;32m   3783\u001b[0m \u001b[39mobject\u001b[39;00m\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m   3837\u001b[0m \u001b[39mNone\u001b[39;00m\n\u001b[0;32m   3838\u001b[0m \u001b[39m\"\"\"\u001b[39;00m\n\u001b[0;32m   3839\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mplotly\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mio\u001b[39;00m \u001b[39mas\u001b[39;00m \u001b[39mpio\u001b[39;00m\n\u001b[1;32m-> 3841\u001b[0m \u001b[39mreturn\u001b[39;00m pio\u001b[39m.\u001b[39;49mwrite_image(\u001b[39mself\u001b[39;49m, \u001b[39m*\u001b[39;49margs, \u001b[39m*\u001b[39;49m\u001b[39m*\u001b[39;49mkwargs)\n",
+      "File \u001b[1;32mc:\\Users\\maxra\\.virtualenvs\\Databehandling-Max-Rain--ARGqDdif\\Lib\\site-packages\\plotly\\io\\_kaleido.py:266\u001b[0m, in \u001b[0;36mwrite_image\u001b[1;34m(fig, file, format, scale, width, height, validate, engine)\u001b[0m\n\u001b[0;32m    250\u001b[0m             \u001b[39mraise\u001b[39;00m \u001b[39mValueError\u001b[39;00m(\n\u001b[0;32m    251\u001b[0m \u001b[39m                \u001b[39m\u001b[39m\"\"\"\u001b[39;00m\n\u001b[0;32m    252\u001b[0m \u001b[39mCannot infer image type from output path '{file}'.\u001b[39;00m\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m    260\u001b[0m                 )\n\u001b[0;32m    261\u001b[0m             )\n\u001b[0;32m    263\u001b[0m     \u001b[39m# Request image\u001b[39;00m\n\u001b[0;32m    264\u001b[0m     \u001b[39m# -------------\u001b[39;00m\n\u001b[0;32m    265\u001b[0m     \u001b[39m# Do this first so we don't create a file if image conversion fails\u001b[39;00m\n\u001b[1;32m--> 266\u001b[0m     img_data \u001b[39m=\u001b[39m to_image(\n\u001b[0;32m    267\u001b[0m         fig,\n\u001b[0;32m    268\u001b[0m         \u001b[39mformat\u001b[39;49m\u001b[39m=\u001b[39;49m\u001b[39mformat\u001b[39;49m,\n\u001b[0;32m    269\u001b[0m         scale\u001b[39m=\u001b[39;49mscale,\n\u001b[0;32m    270\u001b[0m         width\u001b[39m=\u001b[39;49mwidth,\n\u001b[0;32m    271\u001b[0m         height\u001b[39m=\u001b[39;49mheight,\n\u001b[0;32m    272\u001b[0m         validate\u001b[39m=\u001b[39;49mvalidate,\n\u001b[0;32m    273\u001b[0m         engine\u001b[39m=\u001b[39;49mengine,\n\u001b[0;32m    274\u001b[0m     )\n\u001b[0;32m    276\u001b[0m     \u001b[39m# Open file\u001b[39;00m\n\u001b[0;32m    277\u001b[0m     \u001b[39m# ---------\u001b[39;00m\n\u001b[0;32m    278\u001b[0m     \u001b[39mif\u001b[39;00m path \u001b[39mis\u001b[39;00m \u001b[39mNone\u001b[39;00m:\n\u001b[0;32m    279\u001b[0m         \u001b[39m# We previously failed to make sense of `file` as a pathlib object.\u001b[39;00m\n\u001b[0;32m    280\u001b[0m         \u001b[39m# Attempt to write to `file` as an open file descriptor.\u001b[39;00m\n",
+      "File \u001b[1;32mc:\\Users\\maxra\\.virtualenvs\\Databehandling-Max-Rain--ARGqDdif\\Lib\\site-packages\\plotly\\io\\_kaleido.py:132\u001b[0m, in \u001b[0;36mto_image\u001b[1;34m(fig, format, width, height, scale, validate, engine)\u001b[0m\n\u001b[0;32m    130\u001b[0m     \u001b[39m# Raise informative error message if Kaleido is not installed\u001b[39;00m\n\u001b[0;32m    131\u001b[0m     \u001b[39mif\u001b[39;00m scope \u001b[39mis\u001b[39;00m \u001b[39mNone\u001b[39;00m:\n\u001b[1;32m--> 132\u001b[0m         \u001b[39mraise\u001b[39;00m \u001b[39mValueError\u001b[39;00m(\n\u001b[0;32m    133\u001b[0m \u001b[39m            \u001b[39m\u001b[39m\"\"\"\u001b[39;00m\n\u001b[0;32m    134\u001b[0m \u001b[39mImage export using the \"kaleido\" engine requires the kaleido package,\u001b[39;00m\n\u001b[0;32m    135\u001b[0m \u001b[39mwhich can be installed using pip:\u001b[39;00m\n\u001b[0;32m    136\u001b[0m \u001b[39m    $ pip install -U kaleido\u001b[39;00m\n\u001b[0;32m    137\u001b[0m \u001b[39m\"\"\"\u001b[39;00m\n\u001b[0;32m    138\u001b[0m         )\n\u001b[0;32m    140\u001b[0m     \u001b[39m# Validate figure\u001b[39;00m\n\u001b[0;32m    141\u001b[0m     \u001b[39m# ---------------\u001b[39;00m\n\u001b[0;32m    142\u001b[0m     fig_dict \u001b[39m=\u001b[39m validate_coerce_fig_to_dict(fig, validate)\n",
+      "\u001b[1;31mValueError\u001b[0m: \nImage export using the \"kaleido\" engine requires the kaleido package,\nwhich can be installed using pip:\n    $ pip install -U kaleido\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Creates a new dataframe grouping that only shows the columns \"Team\" and \"Total Medals\"\n",
+    "# Value_counts Counts the values for each row\n",
+    "# Unstack transforms the groupby into a new dataframe\n",
+    "# fillna changes the missing data to having a value of 0 so it wont effect the counting\n",
+    "# Sum counts everthing in the first axis which is \"Total Medals\" after we used reset_index to both reset the index and change the name of the second column.\n",
+    "country_medals = data_athletes.groupby(\"NOC\")[\"Medal\"].value_counts().unstack().fillna(0).sum(axis=1).reset_index(name=\"Total Medals\")\n",
+    "\n",
+    "top_ten_countries = country_medals.sort_values(by=\"Total Medals\", ascending=False).head(10)\n",
+    "\n",
+    "top_ten_countries_diagram = px.bar(\n",
+    "    top_ten_countries,\n",
+    "    x=\"NOC\", y=\"Total Medals\",\n",
+    "    title=\"Top 10 countries based on total medals won:\",\n",
+    "    color=\"NOC\",\n",
+    "    labels={\"NOC\" : \"Countries\", \"Total Medals\" : \"Medals\"}\n",
+    ")\n",
+    "\n",
+    "top_ten_countries_diagram.write_image(\"../Projekt_OS_Australien/Visualisering/Top_ten_countries_medals.png\")\n"
+   ]
   }
  ],
  "metadata": {
@@ -74,7 +467,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.0"
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
