- Added a sex distribution piechart - Removed placeholder.txt

--- a/main.ipynb
+++ b/main.ipynb
@@ -7,10 +7,19 @@
    "outputs": [],
    "source": [
     "import pandas as pd\n",
+    "import numpy as np\n",
+    "import plotly_express as px\n",
     "\n",
     "# Load datasets\n",
     "data_athletes = pd.read_csv('Data/athlete_events.csv')\n",
     "data_noc = pd.read_csv('Data/noc_regions.csv')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Which countries are included in the dataset?"
    ]
   },
   {
@@ -35,6 +44,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### How many countries are included in the dataset?"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -48,6 +64,112 @@
     "number_of_unique_regions = len(filtered_regions)\n",
     "\n",
     "print(f\"Total number of unique regions: {number_of_unique_regions}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Which sports are in the event?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sports_list = data_athletes['Sport'].unique()\n",
+    "\n",
+    "print(\"Types of sports:\")\n",
+    "for sport in sports_list:\n",
+    "    print(sport)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### What types of medals are won?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "medal_types = data_athletes['Medal'].unique()\n",
+    "\n",
+    "# Removes the rows where no medals has been won\n",
+    "medal_types_filtered = np.delete(medal_types, 0)\n",
+    "\n",
+    "print(\"Types of medals:\")\n",
+    "for medal in medal_types_filtered:\n",
+    "    print(medal)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Sex distribiution chart"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Remove duplicate entries based on 'ID' to ensure each athlete is counted only once.\n",
+    "data_unique_athletes = data_athletes.drop_duplicates(subset=['ID'])\n",
+    "\n",
+    "# Count the number of male and female participants\n",
+    "sex_distribution = data_unique_athletes['Sex'].value_counts()\n",
+    "\n",
+    "# Creating a pie chart\n",
+    "sex_distribution_piechart = px.pie(sex_distribution, \n",
+    "            # The lambda function in the names argument is used to map \"F\" to \"Female\" and \"M\" to \"Male\".\n",
+    "             names=sex_distribution.index.map(lambda x: 'Female' if x == 'F' else 'Male'),\n",
+    "             values=sex_distribution.values,\n",
+    "             title='Sex distribution of all athletes',\n",
+    "             labels={'names' : 'Sex', \"values\" : 'Amount'})\n",
+    "\n",
+    "sex_distribution_piechart.write_html((\"../Projekt_OS_Australien/Visualisering/Sex_distribution_piechart.html\"))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Top 10 countries based on total medals won"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Creates a new dataframe grouping that only shows the columns \"Team\" and \"Total Medals\"\n",
+    "# Value_counts Counts the values for each row\n",
+    "# Unstack transforms the groupby into a new dataframe\n",
+    "# fillna changes the missing data to having a value of 0 so it wont effect the counting\n",
+    "# Sum counts everthing in the first axis which is \"Total Medals\" after we used reset_index to both reset the index and change the name of the second column.\n",
+    "country_medals = data_athletes.groupby(\"NOC\")[\"Medal\"].value_counts().unstack().fillna(0).sum(axis=1).reset_index(name=\"Total Medals\")\n",
+    "\n",
+    "top_ten_countries = country_medals.sort_values(by=\"Total Medals\", ascending=False).head(10)\n",
+    "\n",
+    "top_ten_countries_diagram = px.bar(\n",
+    "    top_ten_countries,\n",
+    "    x=\"NOC\", y=\"Total Medals\",\n",
+    "    title=\"Top 10 countries based on total medals won:\",\n",
+    "    color=\"NOC\",\n",
+    "    labels={\"NOC\" : \"Countries\", \"Total Medals\" : \"Medals\"}\n",
+    ")\n",
+    "\n",
+    "top_ten_countries_diagram.write_html(\"../Projekt_OS_Australien/Visualisering/Top_ten_countries_medals.html\")"
    ]
   }
  ],
