Adding age statistics

--- a/main.ipynb
+++ b/main.ipynb
@@ -3,7 +3,12 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-11-20T08:26:29.538602Z",
+     "start_time": "2023-11-20T08:26:27.938593300Z"
+    }
+   },
    "outputs": [],
    "source": [
     "import pandas as pd\n",
@@ -397,6 +402,85 @@
   },
   {
    "cell_type": "markdown",
+   "source": [
+    "### Age Statistics"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "outputs": [],
+   "source": [
+    "# Create dataframe grouping with athletes age, sex and medal\n",
+    "# Dropping rows without age data and filling NaN in Medals with \"No medal\"\n",
+    "# Showing age statistics overall and by sex\n",
+    "athlete_age_medal = data_athletes[[\"Sex\", \"Age\", \"Medal\"]].dropna(subset=[\"Age\"]).fillna({\"Medal\": \"No medal\"})\n",
+    "\n",
+    "age_stats = athlete_age_medal[\"Age\"]\n",
+    "age_stats_by_sex = athlete_age_medal.groupby(\"Sex\")[\"Age\"]"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-11-20T08:52:27.112742200Z",
+     "start_time": "2023-11-20T08:52:27.058804300Z"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "count    261642.000000\nmean         25.556898\nstd           6.393561\nmin          10.000000\n25%          21.000000\n50%          24.000000\n75%          28.000000\nmax          97.000000\nName: Age, dtype: float64"
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "age_stats.describe()"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-11-20T08:52:27.919724800Z",
+     "start_time": "2023-11-20T08:52:27.877697800Z"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "        count       mean       std   min   25%   50%   75%   max\nSex                                                             \nF     74098.0  23.732881  5.795252  11.0  20.0  23.0  27.0  74.0\nM    187544.0  26.277562  6.474972  10.0  22.0  25.0  29.0  97.0",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>count</th>\n      <th>mean</th>\n      <th>std</th>\n      <th>min</th>\n      <th>25%</th>\n      <th>50%</th>\n      <th>75%</th>\n      <th>max</th>\n    </tr>\n    <tr>\n      <th>Sex</th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>F</th>\n      <td>74098.0</td>\n      <td>23.732881</td>\n      <td>5.795252</td>\n      <td>11.0</td>\n      <td>20.0</td>\n      <td>23.0</td>\n      <td>27.0</td>\n      <td>74.0</td>\n    </tr>\n    <tr>\n      <th>M</th>\n      <td>187544.0</td>\n      <td>26.277562</td>\n      <td>6.474972</td>\n      <td>10.0</td>\n      <td>22.0</td>\n      <td>25.0</td>\n      <td>29.0</td>\n      <td>97.0</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "age_stats_by_sex.describe()"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-11-20T08:52:28.971366100Z",
+     "start_time": "2023-11-20T08:52:28.937172300Z"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
     "### Anonymization function for names in dataset"
@@ -404,8 +488,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 35,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-11-20T08:52:30.899847300Z",
+     "start_time": "2023-11-20T08:52:30.643395200Z"
+    }
+   },
    "outputs": [],
    "source": [
     "#Anonymize a name using SHA-256 hashing algorithm\n",
@@ -419,6 +508,13 @@
     "# Using the function to anonymize the name column\n",
     "data_athletes['Name'] = data_athletes['Name'].apply(anonymize_names)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "source": [],
+   "metadata": {
+    "collapsed": false
+   }
   }
  ],
  "metadata": {
