Adding medal per age group statistics

--- a/main.ipynb
+++ b/main.ipynb
@@ -481,6 +481,62 @@
   },
   {
    "cell_type": "markdown",
+   "source": [
+    "### Medals by age group"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "outputs": [],
+   "source": [
+    "# Defining age bins\n",
+    "# Creating new column \"Age Group\" based on the age bins\n",
+    "# Group by \"Sex\", \"Age Group\" and \"Medals\" and count the medal occurrences\n",
+    "# Sort the columns, gold first, no medal last.\n",
+    "age_bins = [10, 20, 30, 40, 50, 60, 70, 80, 90]\n",
+    "athlete_age_medal[\"Age Group\"] = pd.cut(athlete_age_medal[\"Age\"], bins=age_bins, labels=[f'{i}-{i+9}' for i in age_bins[:-1]])\n",
+    "age_group_medals = athlete_age_medal.groupby([\"Sex\", \"Age Group\", \"Medal\"], observed=False).size().unstack(fill_value=0)\n",
+    "age_group_medals = age_group_medals[[\"Gold\", \"Silver\", \"Bronze\", \"No medal\"]]"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-11-20T09:10:20.040869500Z",
+     "start_time": "2023-11-20T09:10:19.987876200Z"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "Medal          Gold  Silver  Bronze  No medal\nSex Age Group                                \nF   10-19       852     837     787     20254\n    20-29      2469    2458    2531     35917\n    30-39       398     401     407      5934\n    40-49        22      28      32       579\n    50-59         2       5       3       112\n    60-69         1       0       3        58\n    70-79         0       0       0         8\n    80-89         0       0       0         0\nM   10-19       985     936    1014     21895\n    20-29      6696    6405    6581    108917\n    30-39      1488    1432    1348     22998\n    40-49       249     250     241      4362\n    50-59        57      55      51      1083\n    60-69         5      11       5       386\n    70-79         0       3       2        80\n    80-89         0       0       0         6",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>Medal</th>\n      <th>Gold</th>\n      <th>Silver</th>\n      <th>Bronze</th>\n      <th>No medal</th>\n    </tr>\n    <tr>\n      <th>Sex</th>\n      <th>Age Group</th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th rowspan=\"8\" valign=\"top\">F</th>\n      <th>10-19</th>\n      <td>852</td>\n      <td>837</td>\n      <td>787</td>\n      <td>20254</td>\n    </tr>\n    <tr>\n      <th>20-29</th>\n      <td>2469</td>\n      <td>2458</td>\n      <td>2531</td>\n      <td>35917</td>\n    </tr>\n    <tr>\n      <th>30-39</th>\n      <td>398</td>\n      <td>401</td>\n      <td>407</td>\n      <td>5934</td>\n    </tr>\n    <tr>\n      <th>40-49</th>\n      <td>22</td>\n      <td>28</td>\n      <td>32</td>\n      <td>579</td>\n    </tr>\n    <tr>\n      <th>50-59</th>\n      <td>2</td>\n      <td>5</td>\n      <td>3</td>\n      <td>112</td>\n    </tr>\n    <tr>\n      <th>60-69</th>\n      <td>1</td>\n      <td>0</td>\n      <td>3</td>\n      <td>58</td>\n    </tr>\n    <tr>\n      <th>70-79</th>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>8</td>\n    </tr>\n    <tr>\n      <th>80-89</th>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n    </tr>\n    <tr>\n      <th rowspan=\"8\" valign=\"top\">M</th>\n      <th>10-19</th>\n      <td>985</td>\n      <td>936</td>\n      <td>1014</td>\n      <td>21895</td>\n    </tr>\n    <tr>\n      <th>20-29</th>\n      <td>6696</td>\n      <td>6405</td>\n      <td>6581</td>\n      <td>108917</td>\n    </tr>\n    <tr>\n      <th>30-39</th>\n      <td>1488</td>\n      <td>1432</td>\n      <td>1348</td>\n      <td>22998</td>\n    </tr>\n    <tr>\n      <th>40-49</th>\n      <td>249</td>\n      <td>250</td>\n      <td>241</td>\n      <td>4362</td>\n    </tr>\n    <tr>\n      <th>50-59</th>\n      <td>57</td>\n      <td>55</td>\n      <td>51</td>\n      <td>1083</td>\n    </tr>\n    <tr>\n      <th>60-69</th>\n      <td>5</td>\n      <td>11</td>\n      <td>5</td>\n      <td>386</td>\n    </tr>\n    <tr>\n      <th>70-79</th>\n      <td>0</td>\n      <td>3</td>\n      <td>2</td>\n      <td>80</td>\n    </tr>\n    <tr>\n      <th>80-89</th>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>6</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "age_group_medals"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-11-20T09:10:26.117395500Z",
+     "start_time": "2023-11-20T09:10:26.084197700Z"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
     "### Anonymization function for names in dataset"
