Adding medal per age group diagram

--- a/main.ipynb
+++ b/main.ipynb
@@ -490,7 +490,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 51,
    "outputs": [],
    "source": [
     "# Defining age bins\n",
@@ -500,26 +500,26 @@
     "age_bins = [10, 20, 30, 40, 50, 60, 70, 80, 90]\n",
     "athlete_age_medal[\"Age Group\"] = pd.cut(athlete_age_medal[\"Age\"], bins=age_bins, labels=[f'{i}-{i+9}' for i in age_bins[:-1]])\n",
     "age_group_medals = athlete_age_medal.groupby([\"Sex\", \"Age Group\", \"Medal\"], observed=False).size().unstack(fill_value=0)\n",
-    "age_group_medals = age_group_medals[[\"Gold\", \"Silver\", \"Bronze\", \"No medal\"]]"
+    "age_group_medals = age_group_medals[[\"Gold\", \"Silver\", \"Bronze\"]]"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-11-20T09:10:20.040869500Z",
-     "start_time": "2023-11-20T09:10:19.987876200Z"
+     "end_time": "2023-11-20T09:23:16.172045900Z",
+     "start_time": "2023-11-20T09:23:16.109943800Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 52,
    "outputs": [
     {
      "data": {
-      "text/plain": "Medal          Gold  Silver  Bronze  No medal\nSex Age Group                                \nF   10-19       852     837     787     20254\n    20-29      2469    2458    2531     35917\n    30-39       398     401     407      5934\n    40-49        22      28      32       579\n    50-59         2       5       3       112\n    60-69         1       0       3        58\n    70-79         0       0       0         8\n    80-89         0       0       0         0\nM   10-19       985     936    1014     21895\n    20-29      6696    6405    6581    108917\n    30-39      1488    1432    1348     22998\n    40-49       249     250     241      4362\n    50-59        57      55      51      1083\n    60-69         5      11       5       386\n    70-79         0       3       2        80\n    80-89         0       0       0         6",
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>Medal</th>\n      <th>Gold</th>\n      <th>Silver</th>\n      <th>Bronze</th>\n      <th>No medal</th>\n    </tr>\n    <tr>\n      <th>Sex</th>\n      <th>Age Group</th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th rowspan=\"8\" valign=\"top\">F</th>\n      <th>10-19</th>\n      <td>852</td>\n      <td>837</td>\n      <td>787</td>\n      <td>20254</td>\n    </tr>\n    <tr>\n      <th>20-29</th>\n      <td>2469</td>\n      <td>2458</td>\n      <td>2531</td>\n      <td>35917</td>\n    </tr>\n    <tr>\n      <th>30-39</th>\n      <td>398</td>\n      <td>401</td>\n      <td>407</td>\n      <td>5934</td>\n    </tr>\n    <tr>\n      <th>40-49</th>\n      <td>22</td>\n      <td>28</td>\n      <td>32</td>\n      <td>579</td>\n    </tr>\n    <tr>\n      <th>50-59</th>\n      <td>2</td>\n      <td>5</td>\n      <td>3</td>\n      <td>112</td>\n    </tr>\n    <tr>\n      <th>60-69</th>\n      <td>1</td>\n      <td>0</td>\n      <td>3</td>\n      <td>58</td>\n    </tr>\n    <tr>\n      <th>70-79</th>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>8</td>\n    </tr>\n    <tr>\n      <th>80-89</th>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n    </tr>\n    <tr>\n      <th rowspan=\"8\" valign=\"top\">M</th>\n      <th>10-19</th>\n      <td>985</td>\n      <td>936</td>\n      <td>1014</td>\n      <td>21895</td>\n    </tr>\n    <tr>\n      <th>20-29</th>\n      <td>6696</td>\n      <td>6405</td>\n      <td>6581</td>\n      <td>108917</td>\n    </tr>\n    <tr>\n      <th>30-39</th>\n      <td>1488</td>\n      <td>1432</td>\n      <td>1348</td>\n      <td>22998</td>\n    </tr>\n    <tr>\n      <th>40-49</th>\n      <td>249</td>\n      <td>250</td>\n      <td>241</td>\n      <td>4362</td>\n    </tr>\n    <tr>\n      <th>50-59</th>\n      <td>57</td>\n      <td>55</td>\n      <td>51</td>\n      <td>1083</td>\n    </tr>\n    <tr>\n      <th>60-69</th>\n      <td>5</td>\n      <td>11</td>\n      <td>5</td>\n      <td>386</td>\n    </tr>\n    <tr>\n      <th>70-79</th>\n      <td>0</td>\n      <td>3</td>\n      <td>2</td>\n      <td>80</td>\n    </tr>\n    <tr>\n      <th>80-89</th>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>6</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+      "text/plain": "Medal          Gold  Silver  Bronze\nSex Age Group                      \nF   10-19       852     837     787\n    20-29      2469    2458    2531\n    30-39       398     401     407\n    40-49        22      28      32\n    50-59         2       5       3\n    60-69         1       0       3\n    70-79         0       0       0\n    80-89         0       0       0\nM   10-19       985     936    1014\n    20-29      6696    6405    6581\n    30-39      1488    1432    1348\n    40-49       249     250     241\n    50-59        57      55      51\n    60-69         5      11       5\n    70-79         0       3       2\n    80-89         0       0       0",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>Medal</th>\n      <th>Gold</th>\n      <th>Silver</th>\n      <th>Bronze</th>\n    </tr>\n    <tr>\n      <th>Sex</th>\n      <th>Age Group</th>\n      <th></th>\n      <th></th>\n      <th></th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th rowspan=\"8\" valign=\"top\">F</th>\n      <th>10-19</th>\n      <td>852</td>\n      <td>837</td>\n      <td>787</td>\n    </tr>\n    <tr>\n      <th>20-29</th>\n      <td>2469</td>\n      <td>2458</td>\n      <td>2531</td>\n    </tr>\n    <tr>\n      <th>30-39</th>\n      <td>398</td>\n      <td>401</td>\n      <td>407</td>\n    </tr>\n    <tr>\n      <th>40-49</th>\n      <td>22</td>\n      <td>28</td>\n      <td>32</td>\n    </tr>\n    <tr>\n      <th>50-59</th>\n      <td>2</td>\n      <td>5</td>\n      <td>3</td>\n    </tr>\n    <tr>\n      <th>60-69</th>\n      <td>1</td>\n      <td>0</td>\n      <td>3</td>\n    </tr>\n    <tr>\n      <th>70-79</th>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n    </tr>\n    <tr>\n      <th>80-89</th>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n    </tr>\n    <tr>\n      <th rowspan=\"8\" valign=\"top\">M</th>\n      <th>10-19</th>\n      <td>985</td>\n      <td>936</td>\n      <td>1014</td>\n    </tr>\n    <tr>\n      <th>20-29</th>\n      <td>6696</td>\n      <td>6405</td>\n      <td>6581</td>\n    </tr>\n    <tr>\n      <th>30-39</th>\n      <td>1488</td>\n      <td>1432</td>\n      <td>1348</td>\n    </tr>\n    <tr>\n      <th>40-49</th>\n      <td>249</td>\n      <td>250</td>\n      <td>241</td>\n    </tr>\n    <tr>\n      <th>50-59</th>\n      <td>57</td>\n      <td>55</td>\n      <td>51</td>\n    </tr>\n    <tr>\n      <th>60-69</th>\n      <td>5</td>\n      <td>11</td>\n      <td>5</td>\n    </tr>\n    <tr>\n      <th>70-79</th>\n      <td>0</td>\n      <td>3</td>\n      <td>2</td>\n    </tr>\n    <tr>\n      <th>80-89</th>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
-     "execution_count": 47,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -530,8 +530,40 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-11-20T09:10:26.117395500Z",
-     "start_time": "2023-11-20T09:10:26.084197700Z"
+     "end_time": "2023-11-20T09:23:17.643751300Z",
+     "start_time": "2023-11-20T09:23:17.607459400Z"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "outputs": [],
+   "source": [
+    "# Melt the DataFrame for easier plotting\n",
+    "# Create bar chart using Plotly Express\n",
+    "age_group_medals_melted = pd.melt(age_group_medals.reset_index(), id_vars=[\"Sex\", \"Age Group\"], var_name=\"Medal\", value_name=\"Count\")\n",
+    "\n",
+    "age_group_medals_diagram = px.bar(\n",
+    "    age_group_medals_melted,\n",
+    "    x=\"Age Group\",\n",
+    "    y=\"Count\",\n",
+    "    color=\"Medal\",\n",
+    "    color_discrete_map={\"Gold\": \"gold\", \"Silver\": \"silver\", \"Bronze\": \"brown\"},\n",
+    "    barmode=\"group\",\n",
+    "    facet_col=\"Sex\",\n",
+    "    category_orders={\"Medal\": [\"Gold\", \"Silver\", \"Bronze\", \"No medal\"]},\n",
+    "    labels={\"Count\": \"Medal Count\", \"Age Group\": \"Age Group\"},\n",
+    "    title=\"Medal Counts per Age Group and Sex\"\n",
+    ")\n",
+    "\n",
+    "age_group_medals_diagram.write_html(\"../Projekt_OS_Australien/Visualisering/Age_group_medals_by_sex.html\")"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-11-20T09:28:18.047440600Z",
+     "start_time": "2023-11-20T09:28:17.989654100Z"
     }
    }
   },
